--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "2.0.0",
   "description": "Web chat client for the TestingGrounds",
   "dependencies": {
+    "mysql": "^2.9.0",
     "socket.io": "^1.3.5"
   }
 }
