--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "moment": "^2.10.6",
     "mysql": "^2.9.0",
-    "pg": "4.4.3",
+    "pg": "^4.4.3",
     "socket.io": "^1.3.5"
+	"request": "^2.79.0"
   }
 }
