--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "moment": "^2.10.6",
     "mysql": "^2.9.0",
     "pg": "^4.4.3",
-    "socket.io": "^1.3.5"
+    "socket.io": "^1.3.5",
 	"request": "^2.79.0"
   }
 }
